--- a/static/templates/recent_topics_filters.hbs
+++ b/static/templates/recent_topics_filters.hbs
@@ -23,3 +23,11 @@
     {{/if}}
     {{t 'Participated' }}
 </button>
+<button data-filter="starred" type="button" class="btn btn-default btn-recent-filters">
+    {{#if filter_starred}}
+    <i class="fa fa-check-square-o"></i>
+    {{else}}
+    <i class="fa fa-square-o"></i>
+    {{/if}}
+    {{t 'Starred' }}
+</button>
