--- a/static/styles/zulip.css
+++ b/static/styles/zulip.css
@@ -1218,7 +1218,8 @@ td.pointer {
 
 .on_hover_topic_edit,
 .on_hover_topic_mute,
-.on_hover_topic_read {
+.on_hover_topic_read,
+.on_hover_topic_star {
     opacity: 0.2;
 }
 
@@ -1230,7 +1231,8 @@ td.pointer {
 .always_visible_topic_edit,
 .on_hover_topic_mute,
 .on_hover_topic_unmute,
-.on_hover_topic_read {
+.on_hover_topic_read,
+.on_hover_topic_star {
     &:hover {
         cursor: pointer;
         opacity: 1;
