css: Convert font-size from % to rem.
Since our body font-size is 14px, these % values depend upon it.
Converted to rem which depends upon root
font size of 16px by default.

--- a/static/styles/settings.css
+++ b/static/styles/settings.css
@@ -845,7 +845,7 @@ input[type="checkbox"] {
 }
 
 .edit_bot_form {
-    font-size: 100%;
+    font-size: 0.875rem;
     margin: 0;
     padding: 0;
 
