--- a/static/styles/reactions.css
+++ b/static/styles/reactions.css
@@ -169,7 +169,7 @@
                 margin: auto;
                 padding-left: 22px;
                 width: calc(100% - 22px - 8px);
-                font-size: 90%;
+                font-size: 0.7875rem;
             }
         }
 
