compose: Use 575px  instead of 551px  as breakpoint for mobile.
This was tested to be working fine. Since display property
doesn't depend upon 551px, no regressions are possible.

--- a/static/styles/compose.css
+++ b/static/styles/compose.css
@@ -16,7 +16,7 @@
                 line-height: 1em;
             }
 
-            @media (min-width: 551px) {
+            @media (min-width: $sm-min) {
                 display: none;
             }
         }
@@ -33,7 +33,7 @@
             display: none;
         }
 
-        @media (max-width: 550px) {
+        @media (max-width: $sm-max) {
             .compose_stream_button,
             .compose_private_button {
                 display: none;
