--- a/static/styles/right_sidebar.css
+++ b/static/styles/right_sidebar.css
@@ -217,7 +217,7 @@
     }
 }
 
-@media (max-width: 500px) {
+@media (max-width: $xs-max) {
     #userlist-toggle {
         height: 30px;
         line-height: 30px;
