--- a/static/styles/zulip.css
+++ b/static/styles/zulip.css
@@ -1577,7 +1577,7 @@ div.focused_table {
         margin: 0 -4px 0 0;
         padding: 12px 6px;
 
-        @media (max-width: 500px) {
+        @media (max-width: $xs-max) {
             padding: 7px 3.5px; /* based on having ~41.66% decrease */
         }
         i {
@@ -1632,14 +1632,14 @@ div.focused_table {
             height: 50%;
             color: hsl(0, 0%, 88%);
             font-size: 20px;
-            @media (max-width: 500px) {
+            @media (max-width: $xs-max) {
                 top: 10%;
             }
         }
 
         &::before {
             left: -3px;
-            @media (max-width: 500px) {
+            @media (max-width: $xs-max) {
                 /* this ensures the before "|" doesn't overlap
                    with the stream name text on small narrows */
                 left: 0;
@@ -1665,7 +1665,7 @@ div.focused_table {
         padding: 12px 0;
         padding-left: 10px;
 
-        @media (max-width: 500px) {
+        @media (max-width: $xs-max) {
             padding: 7px 0;
             padding-left: 10px;
         }
@@ -1682,7 +1682,7 @@ div.focused_table {
         font-size: 20px;
 
         padding: 10px 15px 0 0;
-        @media (max-width: 500px) {
+        @media (max-width: $xs-max) {
             padding: 5px 15px 0 0;
         }
     }
@@ -1829,13 +1829,13 @@ div.focused_table {
         padding: 0;
     }
 
-    @media (min-width: 500px) {
+    @media (min-width: $xs-max) {
         .pill {
             padding: 2px 0 2px 0 !important;
             font-size: 14px;
         }
     }
-    @media (max-width: 500px) {
+    @media (max-width: $xs-max) {
         #search_arrows .pill {
             line-height: 20px;
 
@@ -2780,7 +2780,7 @@ select.inline_select_topic_edit {
     }
 }
 
-@media (max-width: 500px) {
+@media (max-width: $xs-max) {
     .column-right.expanded .right-sidebar,
     .column-left.expanded .left-sidebar {
         margin-top: 31px;
