--- a/static/styles/zulip.css
+++ b/static/styles/zulip.css
@@ -2682,7 +2682,7 @@ select.inline_select_topic_edit {
     }
 }
 
-@media (max-width: 775px) {
+@media (max-width: $sm-max) {
     body {
         padding: 0;
     }
