--- a/static/styles/compose.css
+++ b/static/styles/compose.css
@@ -503,7 +503,7 @@ a#undo_markdown_preview {
     }
 }
 
-@media (max-width: 775px) {
+@media (max-width: $sm-max) {
     .compose-content {
         margin-right: 7px;
         margin-left: 7px;
