--- a/static/styles/recent_topics.css
+++ b/static/styles/recent_topics.css
@@ -283,7 +283,7 @@
             white-space: nowrap;
         }
 
-        @media (max-width: 750px) {
+        @media (max-width: $sm-max) {
             /* Hide participants and last message time
                on smaller screens. This ensures user always
                has a nice UI experience. */
