--- a/static/styles/settings.css
+++ b/static/styles/settings.css
@@ -1790,7 +1790,7 @@ body:not(.night-mode) #settings_page .custom_user_field .datepicker {
 
 /* This value needs to match with the same in subscriptions.css, as
    we have some shared styles declared there */
-@media (max-width: 750px) {
+@media (max-width: $sm-max) {
     #settings_overlay_container {
         /* this variable allows JavaScript to detect this media query */
         --single-column: yes;
