css: Replace 700px with sm-max for max-width media queries.

--- a/static/styles/recent_topics.css
+++ b/static/styles/recent_topics.css
@@ -15,7 +15,7 @@
         max-width: 90%;
     }
 
-    @media (max-width: 700px) {
+    @media (max-width: $sm-max) {
         height: 95%;
         max-width: none;
         width: 90%;
