--- a/static/styles/drafts.css
+++ b/static/styles/drafts.css
@@ -15,7 +15,7 @@
         max-width: 60%;
     }
 
-    @media (max-width: 700px) {
+    @media (max-width: $sm-max) {
         height: 95%;
         max-width: none;
         width: 90%;
