--- a/static/styles/zulip.css
+++ b/static/styles/zulip.css
@@ -2898,7 +2898,7 @@ select.inline_select_topic_edit {
     }
 }
 
-@media only screen and (min-width: 300px) and (max-width: 700px) {
+@media only screen and (min-width: 300px) and (max-width: $sm-max) {
     #feedback_container {
         width: calc(90% - 30px);
         left: 5%;
