--- a/static/styles/alerts.css
+++ b/static/styles/alerts.css
@@ -234,7 +234,7 @@ $alert-error-red: hsl(0, 80%, 40%);
 }
 
 /* @media queries */
-@media (max-width: 900px) {
+@media (max-width: $md-max) {
     .alert-box {
         width: 80%;
         left: 10%;
