css: Replace 1033px with $md-max for max-width media queries.

--- a/static/styles/subscriptions.css
+++ b/static/styles/subscriptions.css
@@ -1102,7 +1102,7 @@ ul.grey-box {
     }
 }
 
-@media (max-width: 1033px) {
+@media (max-width: $md-max) {
     .subscriptions-container .left .search-container {
         flex-wrap: wrap;
         justify-content: space-evenly;
