--- a/static/styles/app_components.css
+++ b/static/styles/app_components.css
@@ -268,7 +268,7 @@
     .stream_sorter_toggle {
         margin-left: auto;
 
-        @media (min-width: $sm-max) and (max-width: 1033px) {
+        @media (min-width: $sm-max) and (max-width: $md-max) {
             margin-left: unset;
         }
     }
