--- a/static/styles/drafts.css
+++ b/static/styles/drafts.css
@@ -11,7 +11,7 @@
     display: flex;
     flex-direction: column;
 
-    @media (max-width: 1130px) {
+    @media (max-width: $lg-max) {
         max-width: 60%;
     }
 
