--- a/static/styles/subscriptions.css
+++ b/static/styles/subscriptions.css
@@ -1086,7 +1086,7 @@ ul.grey-box {
     }
 }
 
-@media (max-width: 1130px) {
+@media (max-width: $lg-max) {
     .subscriptions-container {
         max-width: 95%;
     }
