css: Replace 768px with sm-max for max width media queries.

--- a/static/styles/popovers.css
+++ b/static/styles/popovers.css
@@ -353,7 +353,7 @@ ul {
     }
 }
 
-@media (max-width: 768px) {
+@media (max-width: $sm-max) {
     .message-info-popover,
     .user-info-popover {
         display: flex !important;
