--- a/static/styles/informational_overlays.css
+++ b/static/styles/informational_overlays.css
@@ -122,7 +122,7 @@
     margin-bottom: 10px !important;
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: $sm-max) {
     .informational-overlays {
         .overlay-content {
             width: calc(100% - 20px);
