css: Replace 736px with $sm-max for max-width media queries.

--- a/static/styles/lightbox.css
+++ b/static/styles/lightbox.css
@@ -253,7 +253,7 @@
     }
 }
 
-@media only screen and (max-width: 736px) {
+@media only screen and (max-width: $sm-max) {
     #lightbox_overlay {
         .image-actions {
             float: left;
