css: Replace 600px with sm-max for max-width media queries.

--- a/static/styles/rendered_markdown.css
+++ b/static/styles/rendered_markdown.css
@@ -494,7 +494,7 @@
     right: 12px;
 }
 
-@media (max-width: 600px) {
+@media (max-width: $sm-max) {
     .rendered_markdown .message_embed {
         height: auto;
 
