--- a/static/styles/settings.css
+++ b/static/styles/settings.css
@@ -1845,7 +1845,7 @@ body:not(.night-mode) #settings_page .custom_user_field .datepicker {
     }
 }
 
-@media (max-width: 480px) {
+@media (max-width: $xs-max) {
     #pw_strength {
         margin: auto;
     }
