css: Remove unused media queries.
Media queries less 367px doesn't make sense since there
are no devices in that range using zulip that would find these
useful.

--- a/static/styles/zulip.css
+++ b/static/styles/zulip.css
@@ -2885,20 +2885,7 @@ select.inline_select_topic_edit {
     }
 }
 
-@media (max-width: 350px) {
-    html {
-        overflow-x: hidden;
-    }
-
-    body,
-    html,
-    .app-main,
-    .header-main {
-        min-width: 320px;
-    }
-}
-
-@media only screen and (min-width: 300px) and (max-width: $sm-max) {
+@media only screen and (max-width: $sm-max) {
     #feedback_container {
         width: calc(90% - 30px);
         left: 5%;
