--- a/templates/analytics/support.html
+++ b/templates/analytics/support.html
@@ -12,7 +12,7 @@
     <br>
     <form class="new-style">
         <center>
-            <input type="text" name="q" class="input-xxlarge search-query" placeholder="emails, string_ids, organization URLs separated by commas" value="{{ request.GET.get('q', '') }}" autofocus>
+            <input type="text" name="q" class="input-xxlarge search-query" placeholder="full names, emails, string_ids, organization URLs separated by commas" value="{{ request.GET.get('q', '') }}" autofocus>
             <button type="submit" class="button small support-search-button">Search</button>
         </center>
     </form>
