media_query: Use 767px  instead of 775px  as md  breakpoint.
We use 767px for hiding left column.

The components changed here were tested to be working fine.

This change is not likely to introduce any regression as the
calculations in the components here were not dependent upon the
breakpoint being at 775px.

--- a/static/styles/compose.css
+++ b/static/styles/compose.css
@@ -503,7 +503,7 @@ a#undo_markdown_preview {
     }
 }
 
-@media (max-width: 775px) {
+@media (max-width: $md-max) {
     .compose-content {
         margin-right: 7px;
         margin-left: 7px;
