--- a/static/styles/zulip.css
+++ b/static/styles/zulip.css
@@ -1827,13 +1827,13 @@ div.focused_table {
         padding: 0;
     }
 
-    @media (min-width: 500px) {
+    @media (min-width: $sm-min) {
         .pill {
             padding: 2px 0 2px 0 !important;
             font-size: 14px;
         }
     }
-    @media (max-width: 500px) {
+    @media (max-width: $sm-max) {
         #search_arrows .pill {
             line-height: 20px;
 
