media_query: Use 575px instead of 500px to reduce spacing.
At 575px, we used to reduce spacing for
all components around webapp.

This is basically the standard breakpoint for mobile devices.

--- a/static/styles/drafts.css
+++ b/static/styles/drafts.css
@@ -111,7 +111,7 @@
             right: -80px;
             font-size: 0.9em;
 
-            @media (max-width: 500px) {
+            @media (max-width: $sm-max) {
                 right: 0;
             }
 
