--- a/static/styles/recent_topics.css
+++ b/static/styles/recent_topics.css
@@ -11,11 +11,7 @@
     display: flex;
     flex-direction: column;
 
-    @media (max-width: 1130px) {
-        max-width: 90%;
-    }
-
-    @media (max-width: 700px) {
+    @media (max-width: $md-max) {
         height: 95%;
         max-width: none;
         width: 90%;
