recent_topics: Use 767px for 750px as breakpoint for hiding columns.
There is no breaking change, just standardizing breakpoints.

--- a/static/styles/recent_topics.css
+++ b/static/styles/recent_topics.css
@@ -279,7 +279,7 @@
             white-space: nowrap;
         }
 
-        @media (max-width: 750px) {
+        @media (max-width: $md-max) {
             /* Hide participants and last message time
                on smaller screens. This ensures user always
                has a nice UI experience. */
