subscriptions_overlay: Use 991px as breakpoint for smaller devices.
Instead of adjusting the width of settings container at
1130px, we adjust it at 991px which is the standard for smaller
screens. Adjusting it 1200px(xl) didn't make sense, so the
next reasonable breakpoint was used.

--- a/static/styles/subscriptions.css
+++ b/static/styles/subscriptions.css
@@ -1087,7 +1087,7 @@ ul.grey-box {
     }
 }
 
-@media (max-width: 1130px) {
+@media (max-width: $lg-max) {
     .subscriptions-container {
         max-width: 95%;
     }
