--- a/static/styles/subscriptions.css
+++ b/static/styles/subscriptions.css
@@ -1119,7 +1119,7 @@ ul.grey-box {
 
    Longer-term we should extract this logic two-column-overlay class
    to read more naturally. */
-@media (max-width: 750px) {
+@media (max-width: $md-max) {
     .subscriptions-container {
         position: relative;
         overflow: hidden;
