subscriptions_overlay: Justify stream filters at 991px vs 1033px.
This media query aligns filter buttons on tablets. Since tablets
range are usually less than 991px in width, this breakpoint makes
more sense. Also, the filter buttons looks nice between 1033px
and 991px.

--- a/static/styles/app_components.css
+++ b/static/styles/app_components.css
@@ -268,7 +268,7 @@
     .stream_sorter_toggle {
         margin-left: auto;
 
-        @media (min-width: 750px) and (max-width: 1033px) {
+        @media (max-width: $lg-max) {
             margin-left: unset;
         }
     }
