--- a/static/styles/subscriptions.css
+++ b/static/styles/subscriptions.css
@@ -1103,7 +1103,7 @@ ul.grey-box {
     }
 }
 
-@media (max-width: 1033px) {
+@media (max-width: $lg-max) {
     .subscriptions-container .left .search-container {
         flex-wrap: wrap;
         justify-content: space-evenly;
