--- a/static/styles/app_components.css
+++ b/static/styles/app_components.css
@@ -390,7 +390,7 @@
     }
 }
 
-@media (max-width: 767px) {
+@media (max-width: $md-max) {
     /* Override Bootstrap's responsive grid to display input at full width */
     .input-append .stream-list-filter {
         /* Input width = 100% - 10px margin x2 - 6px padding x2 - 1px border x2. */
