--- a/static/styles/settings.css
+++ b/static/styles/settings.css
@@ -1878,14 +1878,10 @@ body:not(.night-mode) #settings_page .custom_user_field .datepicker {
     }
 }
 
-@media only screen and (min-width: 700px) and (max-width: 875px) {
-    .bots_list .bot-information-box {
-        width: calc(100% - 10px);
-        max-height: unset;
-    }
-}
-
-@media only screen and (max-width: 625px) {
+@media only screen and (max-width: $lg-max) {
+    /* Show bot-information-box at full width on small
+       screen sizes. Not having this media query breaks the
+       information box */
     .bots_list .bot-information-box {
         width: calc(100% - 10px);
         max-height: unset;
