--- a/static/styles/lightbox.css
+++ b/static/styles/lightbox.css
@@ -253,7 +253,7 @@
     }
 }
 
-@media only screen and (min-width: 320px) and (max-width: 736px) {
+@media only screen and (min-width: 320px) and (max-width: $md-max) {
     #lightbox_overlay {
         .image-actions {
             float: left;
