subscriptions_overlay: Show buttons in next line as block at <576px.
When we switch subscription overlay from two column to one
column overlay, we also set stream buttons to show in next line.

575px because it the breakpoint used by bootstrap 4 for small
screens.

--- a/static/styles/subscriptions.css
+++ b/static/styles/subscriptions.css
@@ -1180,6 +1180,14 @@ ul.grey-box {
     }
 }
 
+@media (max-width: 575px) {
+    #subscription_overlay .subscription_settings .button-group {
+        display: block;
+        float: unset;
+        margin-top: 10px;
+    }
+}
+
 #stream-creation #invites-warning-modal .modal-footer {
     position: static;
 }
