--- a/static/templates/message_controls.hbs
+++ b/static/templates/message_controls.hbs
@@ -1,15 +1,17 @@
 <div class="message_controls{{#status_message}} sender-status-controls{{/status_message}} no-select">
-    {{#if msg/sent_by_me}}
-        {{#unless msg/locally_echoed}}
-        <div class="edit_content"></div>
+    {{#if not_web_public_visitor}}
+        {{#if msg/sent_by_me}}
+            {{#unless msg/locally_echoed}}
+            <div class="edit_content"></div>
+            {{/unless}}
+        {{/if}}
+
+        {{#unless msg/sent_by_me}}
+        <div class="reaction_button">
+            <i class="fa fa-smile-o" aria-label="{{#tr this}}Add emoji reaction{{/tr}} (:)" role="button" aria-haspopup="true" tabindex="0"></i>
+        </div>
         {{/unless}}
     {{/if}}
-
-    {{#unless msg/sent_by_me}}
-    <div class="reaction_button">
-        <i class="fa fa-smile-o" aria-label="{{#tr this}}Add emoji reaction{{/tr}} (:)" role="button" aria-haspopup="true" tabindex="0"></i>
-    </div>
-    {{/unless}}
 
     {{#unless msg/locally_echoed}}
     <div class="info actions_hover">
@@ -17,15 +19,16 @@
     </div>
     {{/unless}}
 
-    <div class="message_failed {{#unless msg.failed_request}}notvisible{{/unless}}">
-        <i class="fa fa-refresh refresh-failed-message" data-toggle="tooltip" title="{{t 'Retry' }}" aria-label="{{t 'Retry' }}" role="button" tabindex="0"></i>
-        <i class="fa fa-times-circle remove-failed-message" data-toggle="tooltip" title="{{t 'Cancel' }}" aria-label="{{t 'Cancel' }}" role="button" tabindex="0"></i>
-    </div>
+    {{#if not_web_public_visitor}}
+        <div class="message_failed {{#unless msg.failed_request}}notvisible{{/unless}}">
+            <i class="fa fa-refresh refresh-failed-message" data-toggle="tooltip" title="{{t 'Retry' }}" aria-label="{{t 'Retry' }}" role="button" tabindex="0"></i>
+            <i class="fa fa-times-circle remove-failed-message" data-toggle="tooltip" title="{{t 'Cancel' }}" aria-label="{{t 'Cancel' }}" role="button" tabindex="0"></i>
+        </div>
 
-    {{#unless msg/locally_echoed}}
-    <div class="star_container {{#if msg/starred}}{{else}}empty-star{{/if}}">
-        <i role="button" tabindex="0" class="star fa {{#if msg/starred}}fa-star{{else}}fa-star-o{{/if}}" title="{{#tr this.msg}}__starred_status__ this message{{/tr}} (Ctrl + s)"></i>
-    </div>
-    {{/unless}}
-
+        {{#unless msg/locally_echoed}}
+        <div class="star_container {{#if msg/starred}}{{else}}empty-star{{/if}}">
+            <i role="button" tabindex="0" class="star fa {{#if msg/starred}}fa-star{{else}}fa-star-o{{/if}}" title="{{#tr this.msg}}__starred_status__ this message{{/tr}} (Ctrl + s)"></i>
+        </div>
+        {{/unless}}
+    {{/if}}
 </div>
