--- a/static/templates/message_group.hbs
+++ b/static/templates/message_group.hbs
@@ -15,7 +15,7 @@
             {{> recipient_row use_match_properties=../use_match_properties}}
             {{#each message_containers}}
                 {{#with this}}
-                {{> single_message use_match_properties=../../use_match_properties table_name=../../table_name}}
+                {{> single_message use_match_properties=../../use_match_properties table_name=../../table_name not_web_public_visitor=../../not_web_public_visitor }}
                 {{/with}}
             {{/each}}
         </div>
