recent_topics: Use padding instead of line-height for spacing.
We need to increase a bit of spacing around text in rows at <750px
because row height is reduced after hiding avatars. We use
padding instead of line height so that this plays nice when text
is wrapped.

Note more padding is also required for >750px now because text
can be wrapped now and take more width than avatars.

--- a/static/styles/recent_topics.css
+++ b/static/styles/recent_topics.css
@@ -251,6 +251,7 @@
            as new messages arrive from the server. */
         .recent_topic_stream {
             width: 25%;
+            padding: 8px 8px;
         }
 
         .recent_topic_name {
@@ -274,9 +275,6 @@
             thead .participants_header,
             thead .last_msg_time_header {
                 display: none;
-            }
-            table td {
-                line-height: 2em;
             }
         }
     }
