--- a/static/templates/user_presence_row.hbs
+++ b/static/templates/user_presence_row.hbs
@@ -6,8 +6,8 @@
           data-user-id="{{user_id}}"
           data-name="{{name}}">
             {{name}}
-            {{#if my_user_status}}
-            <span class="my_user_status">{{my_user_status}}</span>
+            {{#if status_emoji}}
+            <img class="status_emoji" src="/static/generated/emoji/images-{{emojiset}}-64/{{status_emoji}}.png" />
             {{/if}}
         </a>
         <span class="count"><span class="value">{{#if num_unread}}{{num_unread}}{{/if}}</span></span>
