--- a/templates/zerver/app/settings_overlay.html
+++ b/templates/zerver/app/settings_overlay.html
@@ -11,35 +11,35 @@
         <div class="sidebar-list dark-grey small-text">
             <div class="center tab-container"></div>
             <ul class="normal-settings-list">
-                <li tabindex="0" data-section="your-account">
+                <li role="button" tabindex="0" data-section="your-account">
                     <i class="icon fa fa-user" aria-hidden="true"></i>
                     <div class="text">{{ _('Your account') }}</div>
                 </li>
-                <li tabindex="0" data-section="display-settings">
+                <li role="button" tabindex="0" data-section="display-settings">
                     <i class="icon fa fa-clock-o" aria-hidden="true"></i>
                     <div class="text">{{ _('Display settings') }}</div>
                 </li>
-                <li tabindex="0" data-section="notifications">
+                <li role="button" tabindex="0" data-section="notifications">
                     <i class="icon fa fa-exclamation-triangle" aria-hidden="true"></i>
                     <div class="text">{{ _('Notifications') }}</div>
                 </li>
                 {% if not is_guest %}
-                <li tabindex="0" data-section="your-bots">
+                <li role="button" tabindex="0" data-section="your-bots">
                     <i class="icon fa fa-github" aria-hidden="true"></i>
                     <div class="text">{{ _('Your bots') }}</div>
                 </li>
                 {% endif %}
-                <li tabindex="0" data-section="alert-words">
+                <li role="button" tabindex="0" data-section="alert-words">
                     <i class="icon fa fa-book" aria-hidden="true"></i>
                     <div class="text">{{ _('Alert words') }}</div>
                 </li>
                 {% if max_file_upload_size_mib > 0 %}
-                <li tabindex="0" data-section="uploaded-files">
+                <li role="button" tabindex="0" data-section="uploaded-files">
                     <i class="icon fa fa-paperclip" aria-hidden="true"></i>
                     <div class="text">{{ _('Uploaded files') }}</div>
                 </li>
                 {% endif %}
-                <li tabindex="0" data-section="muted-topics">
+                <li role="button" tabindex="0" data-section="muted-topics">
                     <i class="icon fa fa-bell-slash" aria-hidden="true"></i>
                     <div class="text">{{ _('Muted topics') }}</div>
                 </li>
