markdown: Add support for Underscore for markdown emphasis and strong.
This commit adds support for Underscore for markdown emphasis
and strong. Till now emphasis and strong syntax were supported
by Asterisk.

This change is correct both for usability and for improving
compatibility with CommonMark.

Fixes #12325.

--- a/templates/zerver/app/markdown_help.html
+++ b/templates/zerver/app/markdown_help.html
@@ -13,11 +13,11 @@
                 <tbody>
                     <tr>
 
-                        <td>*italic* (or <kbd>Ctrl + I</kbd>)</td>
+                        <td>*italic* or _italic_ (or <kbd>Ctrl + I</kbd>)</td>
                         <td class="rendered_markdown"><i>italic</i></td>
                     </tr>
                     <tr>
-                        <td>**bold** (or <kbd>Ctrl + B</kbd>)</td>
+                        <td>**bold** or __bold__ (or <kbd>Ctrl + B</kbd>)</td>
                         <td class="rendered_markdown"><b>bold</b></td>
                     </tr>
                     <tr>
