--- a/templates/analytics/support.html
+++ b/templates/analytics/support.html
@@ -7,7 +7,6 @@
 <title>Info</title>
 {% endblock %}
 
-
 {% block content %}
 <div class="container">
     <br>
@@ -18,7 +17,13 @@
         </center>
     </form>
 
-    {% if success_message %}
+    {% if error_message %}
+    <div class="alert alert-danger">
+        <center>
+            {{ error_message }}
+        </center>
+    </div>
+    {% elif success_message %}
     <div class="alert alert-success">
         <center>
             {{ success_message }}
