left_sidebar: Add tooltip for shortcut key.

--- a/templates/zerver/app/left_sidebar.html
+++ b/templates/zerver/app/left_sidebar.html
@@ -62,7 +62,7 @@
                         <i class="fa fa-clock-o" aria-hidden="true"></i>
                     </span>
                     {#- squash whitespace -#}
-                    <span>{{ _('Recent topics') }}</span>
+                    <span title="{{ _('Recent topics') }} (t)">{{ _('Recent topics') }}</span>
                 </a>
             </li>
         </ul>
