support: Rename message -> success_message.

--- a/templates/analytics/support.html
+++ b/templates/analytics/support.html
@@ -18,10 +18,10 @@
         </center>
     </form>
 
-    {% if message %}
+    {% if success_message %}
     <div class="alert alert-success">
         <center>
-            {{ message }}
+            {{ success_message }}
         </center>
     </div>
     {% endif %}
