--- a/templates/zerver/app/index.html
+++ b/templates/zerver/app/index.html
@@ -8,6 +8,7 @@
 {% endblock %}
 
 {% block customhead %}
+{% include "zerver/service_worker.html" %}
 <meta name="apple-mobile-web-app-capable" content="yes">
 <link href="/static/images/logo/apple-touch-icon-precomposed.png" rel="apple-touch-icon-precomposed">
 <style>
