WIP: progress update

--- a/templates/zerver/digest_base.html
+++ b/templates/zerver/digest_base.html
@@ -13,9 +13,9 @@
             </div>
             <div>
                 <form>
-                    <label for="start">Start date:</label>
+                    <label for="start">Start date (yyyy-mm-dd):</label>
                     <input type="date" id="start" name="start" value="2020-11-24">
-                    <label for="end">End date:</label>
+                    <label for="end">End date (yyyy-mm-dd):</label>
                     <input type="date" id="end" name="end" value="2020-11-11">
                     <label for="message-weight">Message weight:</label>
                     <input type="number" id="message-weight" name="message-weight" value="1">
