keyboard_shortcuts: Correct the shortcut key for Create new stream.

--- a/templates/zerver/app/keyboard_shortcuts.html
+++ b/templates/zerver/app/keyboard_shortcuts.html
@@ -320,7 +320,7 @@
                 </tr>
                 <tr>
                     <td class="definition">{% trans %}Create new stream{% endtrans %}</td>
-                    <td><span class="hotkey"><kbd>N</kbd></span></td>
+                    <td><span class="hotkey"><kbd>n</kbd></span></td>
                 </tr>
             </table>
         </div>
