--- a/static/styles/zulip.css
+++ b/static/styles/zulip.css
@@ -1224,6 +1224,7 @@ td.pointer {
 
 .on_hover_topic_edit,
 .on_hover_topic_mute,
+.on_hover_topic_unmute,
 .on_hover_topic_read {
     opacity: 0.2;
 }
