--- a/templates/zerver/app/compose.html
+++ b/templates/zerver/app/compose.html
@@ -9,38 +9,34 @@
             </div>
             <div id="compose_buttons">
                 <span class="new_message_button">
-                    <a class="drafts-link no-underline button small rounded compose_drafts_button" href="#drafts" title="{{ _('Drafts') }} (d)">
+                    <a class="drafts-link no-underline button small rounded compose_drafts_button" href="#drafts">
                         {{ _('Drafts') }}
                     </a>
                     <span class="alert-draft pull-left">{{ _('Saved as draft') }}</span>
                 </span>
                 <span class="new_message_button">
                     <button type="button" class="button small rounded compose_mobile_button"
-                      id="left_bar_compose_mobile_button_big"
-                      title="{{ _('New message') }} (c)">
+                      id="left_bar_compose_mobile_button_big">
                         <span>+</span>
                     </button>
                 </span>
                 <span class="new_message_button">
                     <button type="button" class="button small rounded compose_stream_button"
-                      id="left_bar_compose_stream_button_big"
-                      title="{{ _('New topic') }} (c)">
+                      id="left_bar_compose_stream_button_big">
                         <span class="compose_stream_button_label">{{ _('New topic') }}</span>
                     </button>
                 </span>
                 {% if not embedded %}
                 <span class="new_message_button">
                     <button type="button" class="button small rounded compose_private_button"
-                      id="left_bar_compose_private_button_big"
-                      title="{{ _('New private message') }} (x)">
+                      id="left_bar_compose_private_button_big">
                         <span class="compose_private_button_label">{{ _('New private message') }}</span>
                     </button>
                 </span>
                 {% endif %}
                 <span class="new_message_button">
                     <button type="button" class="button small rounded compose_reply_button"
-                      id="left_bar_compose_reply_button_big"
-                      title="{{ _('Reply') }} (r)">
+                      id="left_bar_compose_reply_button_big">
                         <span class="compose_reply_button_label">{{ _('Reply') }}</span>
                     </button>
                 </span>
