--- a/static/styles/user_status.css
+++ b/static/styles/user_status.css
@@ -7,10 +7,17 @@
         border-radius: 4px;
         overflow: hidden;
         background-color: hsl(0, 0%, 100%);
+
+        @media (max-width: 384px) {
+            width: 100%;
+        }
     }
 
     input.user_status {
         width: 336px;
+        @media (max-width: 384px) {
+            width: 94%;
+        }
     }
 
     .user-status-header {
