settings: Make account settings more responsive.
The textarea in Settings/User Profile was overflowing in
smaller width devices.

This commit fixes that issue by adding appropriate media queries.

Fixes part of #16817.

--- a/static/styles/settings.css
+++ b/static/styles/settings.css
@@ -1873,6 +1873,9 @@ body:not(.night-mode) #settings_page .custom_user_field .datepicker {
         flex-direction: column;
         margin-top: 5px;
     }
+    #settings_page .custom_user_field textarea {
+        width: calc(100% - 25px);
+    }
 }
 
 @media only screen and (width < $lg_min) {
