docs: Add workaround for pinning messages.
Described a workaround for pinning stream messages
in the user documentation.
The workaround is to put Markdown in the stream description.
And changed the empty stream description message, suggesting
to put Markdown.

Resolves zulip/zulip#16701

--- a/static/templates/subscription_settings.hbs
+++ b/static/templates/subscription_settings.hbs
@@ -28,7 +28,7 @@
             </div>
         </div>
         <div class="stream-description">
-            <span class="stream-description-editable editable-section description rendered_markdown" data-no-description="{{t 'No description.' }}">{{rendered_markdown rendered_description}}</span>
+            <span class="stream-description-editable editable-section description rendered_markdown" data-no-description="{{t 'No description. Describe the stream\'s purpose briefly in Markdown; link to messages or topics for more detail.' }}">{{rendered_markdown rendered_description}}</span>
             {{#if can_change_name_description}}
             <span class="editable" data-make-editable=".stream-description-editable"></span>
             <span class="checkmark" data-finish-editing=".stream-description-editable">✓</span>
