apidocs: Display Data Type of Parameters in API Documentation.
Currently, the data type of parameters isn't displayed in API Documentation.
Added a function generate_data_type in api_arguments_table_generator to
recursively parse the schemas and extract data type from the argument
parameter and store in data_type variable. Fixes part of #15967.

--- a/static/styles/portico/portico.css
+++ b/static/styles/portico/portico.css
@@ -1717,6 +1717,13 @@ label.label-title {
         font-size: 12px;
         color: hsl(0, 50%, 60%);
     }
+
+    .api-argument-datatype {
+        text-transform: lowercase;
+        font-weight: 600;
+        font-size: 14px;
+        color: hsl(176, 46.4%, 41%);
+    }
 }
 
 .desktop-redirect-box {
