docs_accessibility: Created “Skip Navigation” link for /help & /api docs
Fixes #15948
I have created "Skip Navigations" link by following WCAG model for /help and /api documentations.The idea is to increase the
accesibility of our documentations.

The user will have to press the 'Tab' button in order to access the feature. It will redirect user to markdown navigation
list of the respective documentation.

Changes were made in portico-header.html, portico.css and help.js to make the feature.

--- a/static/styles/portico/portico.css
+++ b/static/styles/portico/portico.css
@@ -136,7 +136,7 @@ html {
 .help {
     .app-main {
         padding: 0;
-        margin-top: 59px;
+        margin-top: 0;
     }
 
     /* Markdown processor generates lots of spurious <p></p> */
@@ -241,6 +241,7 @@ html {
             a {
                 color: inherit;
                 display: block;
+                padding: 1px 4px;
             }
         }
 
@@ -678,6 +679,31 @@ input.text-error {
 
 .portico-page-container .portico-header .dropdown-pill .realm-name {
     margin-left: -3px;
+}
+
+.skip-link {
+    position: absolute;
+    top: -100px;
+    left: 5px;
+    overflow: hidden;
+    margin-left: 5px;
+    border-radius: 6px;
+    padding: 6px 10px;
+    cursor: pointer;
+    background-color: hsl(153, 32%, 55%);
+    color: hsl(0, 0%, 98%);
+    font-size: 18px;
+    font-weight: 400px;
+
+    &:focus {
+        z-index: 5000;
+        transition: ease-in-out 0.5s;
+        top: -3px;
+        width: auto;
+        height: 25px;
+        outline: 5px auto hsl(152, 40%, 42%);
+        color: hsl(0, 0%, 98%);
+    }
 }
 
 .app {
