--- a/templates/zerver/portico-help.html
+++ b/templates/zerver/portico-help.html
@@ -1,10 +1,11 @@
 {% extends "zerver/portico.html" %}
 
 {% block content %}
+
 <div class="portico-container help">
     <div class="portico-wrap">
         {% include 'zerver/portico-header.html' %}
-        <div class="app portico-page">
+        <div class="app portico-page" tabindex="1">
             <div class="app-main portico-page-container{% block hello_page_container %}{% endblock %}">
                 {% block portico_content %}
                 {% endblock %}
