docs: Add auth backend configuration is optional.

--- a/templates/zerver/config_error.html
+++ b/templates/zerver/config_error.html
@@ -54,6 +54,9 @@
                         {"root_domain_uri": root_domain_uri, "settings_path": secrets_path, "secrets_path": secrets_path,
                         "client_id_key_name": "social_auth_" + social_backend_name + "_key"}) }}
                         <p>
+                            <b>Note: </b>Configuring auth backend is <b>optional</b> and is required only if you are working on an issue related to auth backend.
+                        </p>
+                        <p>
                             For more information, have a look at
                             the <a href="https://zulip.readthedocs.io/en/latest/development/authentication.html#{{ social_backend_name }}">authentication
                             setup guide</a> for the development environment.
