--- a/static/styles/portico/markdown.css
+++ b/static/styles/portico/markdown.css
@@ -308,8 +308,8 @@
     }
 
     pre {
-        line-height: 15px;
         code {
+            font-size: 14px;
             white-space: pre-wrap;
         }
     }
