--- a/static/styles/compose.css
+++ b/static/styles/compose.css
@@ -62,6 +62,8 @@
 .message_comp {
     display: none;
     padding: 10px 10px 8px 5px;
+    /*makes message area clickable*/
+    cursor: pointer;
 }
 
 .autocomplete_secondary {
