css: Add Liberation Mono font as option for code blocks.
Code blocks did not have a good font for Linux installations
available as an option, as noted in Issue #15993.
This adds Liberation Mono as an option to be used.

--- a/static/styles/zulip.css
+++ b/static/styles/zulip.css
@@ -68,7 +68,7 @@ a {
 
 code,
 pre {
-    font-family: Menlo, Consolas, "Courier New", monospace;
+    font-family: Menlo, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
 .no-select {
