fix: Leading whitespace of codeblock stripped on edit.
We added a fix to the bug of stripping away leading white
space during a message edit.  When we edit the message,
before we strip all white space, we first see how many
leading white space characters there are.  If there are
more than 4, once we edit the message, we prepend
those spaces on.

--- a/static/templates/actions_popover_content.hbs
+++ b/static/templates/actions_popover_content.hbs
@@ -97,7 +97,7 @@
 
     {{#if should_display_code_block}}
     <li>
-        <a href="#" class="view_lightbox" data-message-id="{{message_id}}" data-clipboard-text="{{ conversation_time_uri }}">
+        <a href="#" class="view_lightbox" data-message-id="{{message_id}}">
             <i class="fa fa-code" aria-hidden="true"></i> {{t "View Code" }}
         </a>
     </li>
