new_feature: Delete a message by editing.

--- a/static/templates/message_edit_form.hbs
+++ b/static/templates/message_edit_form.hbs
@@ -56,6 +56,7 @@
             {{#if is_editable}}
                 <button type="button" class="button small rounded sea-green message_edit_save">{{t "Save" }}</button>
                 <button type="button" class="button small rounded message_edit_cancel">{{t "Cancel" }}</button>
+                <button type="button" class="button small rounded btn-danger message_edit_delete">{{t "Delete" }}</button>
                 {{#if is_content_editable}}
                 <div class="message-edit-feature-group">
                     <input type="file" id="message_edit_file_input_{{message_id}}" class="notvisible pull-left" multiple />
