settings: Rework user_group save_discard widget
Added a consistent save/discard widget inside the
USER GROUP widget and replaces the inconsistent
"Click outside to save or click discard to discard" UI it had.
Allows users to edit user group-settings one user group at a time.

Fixes: #16453

--- a/static/styles/settings.css
+++ b/static/styles/settings.css
@@ -1059,6 +1059,10 @@ input[type="checkbox"] {
         }
     }
 
+    .avoid-user-group-clicks {
+        pointer-events: none;
+    }
+
     .save-status {
         background-color: transparent;
         padding: 2px 5px;
