left_sidebar: Highlight search icon when hovering streams_header.
Previously there was no cue that clicking the streams_header area
would open the stream filter, this commit adds a highlight to the
search icon.

--- a/static/styles/left_sidebar.css
+++ b/static/styles/left_sidebar.css
@@ -68,6 +68,11 @@ li.show-more-topics {
     }
 }
 
+#streams_header:hover > #streams_filter_icon {
+    opacity: 1;
+    cursor: pointer;
+}
+
 #streams_inline_cog {
     margin-right: 10px;
 }
